[gd_scene load_steps=6 format=3 uid="uid://dkktmjubqdt81"]

[ext_resource type="Script" path="res://app/tutorial.gd" id="1_cshdw"]
[ext_resource type="Texture2D" uid="uid://3hem43ycomsv" path="res://assets/tutorial/character_stats.png" id="1_tnmib"]
[ext_resource type="Texture2D" uid="uid://dqxs0kf7mm5hs" path="res://assets/tutorial/decision_stats.png" id="2_4cvc5"]
[ext_resource type="Texture2D" uid="uid://br2ile2jkkore" path="res://assets/tutorial/bond.png" id="3_pmf6u"]
[ext_resource type="Texture2D" uid="uid://t4xnhyhdi5jo" path="res://assets/tutorial/score.png" id="4_qj4wp"]

[node name="Tutorial" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_cshdw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"InflectionPanelContainer"

[node name="Page1" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Page1"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DarkLabel"
text = "You are a sword.

But not just any old piece of steel. You have will. And desire. And the power to influence those who would carry you.

Do you long to become a beacon of good?  Or do you thirst for destruction and ruin?

Push your bearers towards your ultimate goal.

But be wary, push them in ways they are not inclined, and they might cast you aside.
"
autowrap_mode = 3

[node name="Next" type="Button" parent="PanelContainer/Page1"]
layout_mode = 2
size_flags_horizontal = 4
text = "Next"

[node name="Page2" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/Page2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 20
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Page2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/Page2/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_type_variation = &"DarkLabel"
text = "Each bearer has their own traits and inclinations.  You can influence them towards either good or evil, but if their inclination is against your choices you'll hurt the bond you share."
autowrap_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Page2/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"PortraitPanelContainer"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Page2/GridContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("1_tnmib")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Page2/GridContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Page2/GridContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PortraitPanelContainer"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Page2/GridContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("2_4cvc5")
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/Page2/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_type_variation = &"DarkLabel"
text = "The choices you push your bearer to make will change their traits. Is the change toward good or evil?  That is up to you to divine."
autowrap_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/Page2/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Page2/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"PortraitPanelContainer"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Page2/GridContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2
texture = ExtResource("3_pmf6u")
expand_mode = 5

[node name="Label" type="Label" parent="PanelContainer/Page2/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_type_variation = &"DarkLabel"
text = "Having a strong bond with your bearer will make your influence more impactful.  But if your bond grows too weak, only destruction awaits you."
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/Page2/GridContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Page2/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"PortraitPanelContainer"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Page2/GridContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2
texture = ExtResource("4_qj4wp")

[node name="Label" type="Label" parent="PanelContainer/Page2/GridContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_type_variation = &"DarkLabel"
text = "Your aim of great virtue or infamy transcends bearers."
autowrap_mode = 2

[node name="Begin" type="Button" parent="PanelContainer/Page2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Begin"

[connection signal="mouse_entered" from="PanelContainer/Page1/Next" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PanelContainer/Page1/Next" to="." method="_on_next_pressed"]
[connection signal="mouse_entered" from="PanelContainer/Page2/Begin" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PanelContainer/Page2/Begin" to="." method="_on_begin_pressed"]
